# dune-polygongrid

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.am  README.md  configure.ac  dune-polygongrid.pc.in  dune.module  pyproject.toml  setup.py
cmake/modules/: CMakeLists.txt  DunePolygongridMacros.cmake  Makefile.am
cmake/pkg/: Makefile.am
dune/: Makefile.am
dune/grid/: CMakeLists.txt  Makefile.am  polygongrid.hh
dune/grid/polygongrid/: CMakeLists.txt  Makefile.am  declaration.hh  entity.hh  grid.hh  gridfamily.hh  indexset.hh  object.hh  polygon.hh  polytopegeometry.hh
dune/grid/test/: CMakeLists.txt  Makefile.am  test-polygongrid.cc
dune/polygongrid/: CMakeLists.txt  capabilities.hh  declaration.hh  dgf.hh  entity.hh  entityiterator.hh  entityseed.hh  geometry.hh  grid.hh  gridfactory.hh  gridfamily.hh  gridview.hh  halfedge.hh  idset.hh  indexset.hh  intersection.hh  intersectioniterator.hh  mesh.cc  mesh.hh  meshobjects.hh  multivector.hh  object.hh  subentity.hh
gridselector/: CMakeLists.txt  dune-polygongrid
m4/: CMakeLists.txt  Makefile.am  dune-polygongrid.m4
polygongrid/: CMakeLists.txt  Makefile.am  polygon.hh
python/: CMakeLists.txt
python/dune/polygongrid/: CMakeLists.txt  __init__.py  blossoms.py
test/: CMakeLists.txt  test-mesh.cc  test-polygongrid.cc
